# memoake

./: README.md  package.json
.github/workflows/: build.yml  windows-build.yml
docs/: markdown_storage_spec.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: config.rs  lib.rs  markdown_store.rs
src/routes/: +page.svelte
